# KernelDrive

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  execute_as_root.sh  meson.build
data/: com.acedmicabhishek.kerneldrive.policy  kerneldrive-pkexec  kerneldrive.desktop  registry.json
packaging/aur/: PKGBUILD
plugins/: Plugins.md  system_info.cpp
plugins/asus_armoury/: README.md  asus_plugin.cpp
plugins/asus_armoury/backend/: battery.cpp  battery.h  brightness.cpp  brightness.h  core.cpp  core.h  display.cpp  display.h  fan_control.cpp  fan_control.h  fans.cpp  fans.h  gpu.cpp  gpu.h  gpu_mux.cpp  gpu_mux.h  keyboard.cpp  keyboard.h  modes.cpp  modes.h  monitor.cpp  monitor.h  stress.cpp  stress.h  visuals.cpp  visuals.h
plugins/asus_armoury/ui/: notification.cpp  notification.h
plugins/logitech_ghub/: README.md  logitech_plugin.cpp
plugins/logitech_ghub/backend/: hidpp20_device.cpp  hidpp20_device.h  hidpp_constants.h  logitech_peripherals.cpp  logitech_peripherals.h
plugins/ryzen_controller/: meson.build  ryzen_plugin.h
plugins/system_info/: meson.build  system_info_plugin.cpp  system_info_plugin.h
plugins/system_info/backend/: sys_stats.cpp  sys_stats.h
plugins/system_info/ui/: info_page.cpp  info_page.h
src/: main.cpp
src/config/: socials.h
src/core/: config_manager.cpp  config_manager.h  dependency_manager.cpp  dependency_manager.h  plugin_installer.cpp  plugin_installer.h  plugin_manager.cpp  plugin_manager.h  sysfs_writer.cpp  sysfs_writer.h
src/core/display/: display_backend.h  display_manager.cpp  display_manager.h
src/core/display/backends/: gnome_backend.cpp  gnome_backend.h  hyprland_backend.cpp  hyprland_backend.h  x11_backend.cpp  x11_backend.h
src/core/input/: input_backend.h  input_manager.cpp  input_manager.h
src/core/input/backends/: gnome_input.cpp  gnome_input.h  hyprland_input.cpp  hyprland_input.h  x11_input.cpp  x11_input.h
src/core/power/: power_backend.h  power_manager.cpp  power_manager.h
src/core/power/backends/: linux_power.cpp  linux_power.h
src/ui/: window.cpp  window.h
src/ui/pages/: dependencies_page.cpp  dependencies_page.h  display_page.cpp  display_page.h  input_page.cpp  input_page.h  power_page.cpp  power_page.cpp#L1-L15  power_page.h  socials_page.cpp  socials_page.h  store_page.cpp  store_page.h
tools/: optimus_helper.cpp
